Step 1, Failing Test 4

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,9 +1,9 @@
-"..........\n......X...\n" => findSpaceship(map) => [7,2]
-"..........\n..........\n => findSpaceship(map) => "Spaceship lost forever."
+"..........\n......X...\n" => findSpaceship(map) => [7,2] (done)
+"..........\n..........\n => findSpaceship(map) => "No Spaceship found."
 "..........\n....A.....\n => findSpaceship(map) => "Spaceship lost forever."
-" " => findSpaceship(map) => "Spaceship lost forever."
-"X" findSpaceship(map) => [0,0]
-"....X.....\n.........X\n" findSpaceship(map) => return 0;
+" " => findSpaceship(map) => "Spaceship lost forever." (done)
+"X" findSpaceship(map) => [0,0] (done)
+"....X.....\n.........X\n" findSpaceship(map) => return 0; 
 "aosdjs" => findSpaceship(map) => return 0; //any string containing characters other than "\n", "X" or "." result in a fail
 
 
